--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
 								</div>
 							</div>
 						</form>
+						<div class="status-log">
+						</div>
+						<div><button class="btn btn-default btn-sm btn-clear">Clear</button></div>
 					</div>
 				</div>
 			</div>
